adjust project summaries height to prevent buttons overflowing

--- a/styles/pages/portfolio.css
+++ b/styles/pages/portfolio.css
@@ -14,6 +14,18 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;;
 }
 
+@media screen and (max-width: 1435px) {
+  .project {
+    min-height: 650px;
+  }
+}
+
+@media screen and (max-width: 1225px) {
+  .project {
+    min-height: 750px;
+  }
+}
+
 .project .theme-accent-background {
   box-shadow: none;
 }
